# ElecMap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_elecmap_demo.py  setup.py
elecmap/: __init__.py  electrode_detection.py  electrode_visualization.py  utils.py
examples/: run_elecmap_demo.py
src/elecmap/: __init__.py  electrode_detection.py  electrode_visualization.py
