[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elecmap"
version = "0.1.0"
description = "Detect and visualize electrode locations from CT and MR scans."
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "SimpleITK",
  "nibabel",
  "matplotlib",
  "termcolor",
  "nipype"
]

[tool.setuptools]
package-dir = {"" = "."}
license-files = ["LICENSE"]
