[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elecmap"
version = "0.1.1"
authors = [
    { name = "Mohammad Saber", email = "mohammadsaber@gmail.com" }
]
description = "Detect and visualize intracranial electrode locations from CT and MR scans."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "medical imaging",
    "neurology",
    "electrode localization",
    "CT",
    "MR",
    "MRI",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "SimpleITK>=2.1",
    "nipype>=1.8",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "termcolor>=2.0",
    "tqdm>=4.60",
]

[project.urls]
"Homepage" = "https://github.com/saberm2837/ElecMap"
"Bug Tracker" = "https://github.com/saberm2837/ElecMap/issues"

[tool.setuptools.packages.find] 
where = ["src"]
